# m8flow

./: .gitignore  README.md  sample.env
connector-proxy-demo/: app.py  dev.Dockerfile  dev.docker-compose.yml  pyproject.toml
docker/: m8flow-docker-compose.yml  m8flow.nats.Dockerfile
docs/: connector-setup-guide.md  event-driven-architecture.md  event-driven-code-explanation.md  event-driven-external-integration.md  event-driven-quickstart.md  how-to-use.md  nats-event-driven-architecture.md  postgres-connector-guide.md
docs/event-driven/: event-driven-code-explanation.md
m8flow-backend/migrations/versions/: k3c4d5e6f7a9_add_external_form_requests_table.py  l4d5e6f7a8b1_add_notified_at_to_external_form_requests.py
m8flow-backend/src/m8flow_backend/: api.yml  config.py
m8flow-backend/src/m8flow_backend/models/: _timestamps_bootstrap.py  external_form_request.py
m8flow-backend/src/m8flow_backend/routes/: external_forms_controller.py
m8flow-backend/src/m8flow_backend/services/: authorization_service_patch.py  external_form_completion_guard_patch.py  external_form_notification_patch.py  external_form_notification_service.py  external_form_service.py  (+2 more)
m8flow-frontend/src/: ContainerForExtensions.tsx
m8flow-frontend/src/components/: useDiagramModeler.ts
m8flow-frontend/src/views/: ExternalFormAwareTaskShow.tsx  ProcessModelEditDiagram.tsx
m8flow-nats-consumer/: Dockerfile  README.md  consumer.py  notification_worker.py  publisher.py  pyproject.toml  setup_stream.sh
nats_demo/: README.md  consumer.py  docker-compose.yml  publisher.py  setup_stream.py
(+11 files in other folders)
