[project]
name = "m8flow-nats-consumer"
version = "0.1.0"
description = "Standalone NATS consumer service for M8Flow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nats-py[nkeys]>=2.6.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consumer.py"]
