[project]
name = "m8flow-nats-consumer"
version = "0.1.0"
description = "Standalone NATS consumer service for M8Flow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "nats-py[nkeys]>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consumer.py"]
